kubernetes/manifests/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: swapsphere
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: swapsphere.azurecr.io/backend:latest
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /mnt/secrets  # Mount the volume where secrets will be available
            name: secrets-store
            readOnly: true

      imagePullSecrets:
        - name: acr-secret
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            volumeAttributes:
              secretProviderClass: "azure-keyvault-secrets"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: swapsphere
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
