kubernetes/manifests/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: swapsphere
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: swapsphere.azurecr.io/frontend:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   service.beta.kubernetes.io/azure-load-balancer-resource-group: swapsphere
  #   service.beta.kubernetes.io/azure-pip-name: swapspherepip
  #   service.beta.kubernetes.io/azure-dns-label-name: swapsphere
  name: frontend-service
  namespace: swapsphere
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
